update to readme and snap file

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!doctype html>
 <html>
   <head>
-    <title>Hello, Snaps!</title>
+    <title>Priceless.</title>
     <link rel="icon" type="image/svg" href="./images/icon.svg"/>
   </head>
 
   <body>
-    <h1>Hello, Snaps!</h1>
+    <h1>Giving with Web3 is Priceless.</h1>
     <details>
       <summary>Instructions</summary>
       <ul>
-        <li>First, click "Connect". Then, try out the other buttons!</li>
+        <li>First, click "Connect".</li>
         <li>Please note that:</li>
         <ul>
           <li>
@@ -24,8 +24,8 @@
     </details>
     <br/>
 
-    <button class="connect">Connect</button>
-    <button class="sendHello">Send Hello</button>
+    <button class="connect">Install Priceless</button>
+    <button class="sendHello">Donate</button>
   </body>
 
   <script>
